<resources>
    <string name="app_name">HelloWorld</string>

    <!-- TEXTOS DEL MAINACTIVITY -->
    <string name="helloWorld_button_text">HOLA MUNDO</string>
    <string name="birthday_button_text">TARJETA DE CUMPLEAÑOS</string>
    <string name="list_button_text">LISTA DE LA COMPRA</string>
    <string name="red_button_text">LLAMADA A RED</string>

    <!-- TEXTOS DEL USUARIOACTIVITY -->
    <string name="writeName_text">Hola, escribe tu nombre abajo</string>
    <string name="writeName_name_hint">Nombre</string>
    <string name="done_buttom_text">Hecho</string>
    <string name="toast_name_mandatory">El campo Nombre es obligatorio</string>

    <!-- TEXTOS DEL USUARIOSALUDOACTIVITY -->
    <string name="saludo_text">¡Hola %1$s, estás en mi nueva app!</string>

    <!-- TEXTOS DEL BIRTHDAYACTIVITY -->
    <string name="happy_birthday_text">¡FELIZ CUMPLEAÑOS!</string>
    <string name="years_text">¿¡42 AÑOS!?</string>

    <!-- TEXTOS LISTS -->
    <string name="error_name_required">ERROR: indicar el nombre del producto es obligatorio</string>
    <string name="save_button_text">Guardar</string>
    <string name="product_name_hint">Nombre del producto</string>
    <string name="product_quantity_hint">Cantidad</string>
    <string name="add_item_button_text">Añadir Producto</string>

    <!-- TEXTOS ACTIBITY BAR -->
    <string name="usuarioActivity_label">Introducir Usuario</string>
    <string name="usuarioSaludoActivity_label">Saludo Usuario</string>
    <string name="birthdayActivity_label">Tarjeta Cumpleaños</string>
    <string name="listActivity_label">Lista Compra</string>
    <string name="listItemActivity_label">Producto</string>
    <string name="addShopItemActivity_label">Añadir Producto</string>
    <string name="redActivity_label">Llamada Red</string>





</resources>