<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".listPackage.AddShopItemActivity">

    <EditText
        android:id="@+id/item_name_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop= "100sp"
        android:inputType="textMultiLine"
        android:hint="@string/product_name_hint"/>

    <EditText
        android:id="@+id/item_quantity_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/item_name_editText"
        android:inputType="textMultiLine"
        android:hint="@string/product_quantity_hint"/>

    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/item_quantity_editText"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="30sp"
        android:backgroundTint="#77A632"
        android:text="@string/save_button_text"/>

</androidx.constraintlayout.widget.ConstraintLayout>