<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UsuarioActivity">

    <TextView
        android:id="@+id/writeName_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="16sp"
        android:layout_margin="10sp"
        android:textColor="@color/black"
        android:text="@string/writeName_text"/>

    <EditText
        android:id="@+id/writeName_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/writeName_text"
        android:layout_margin="10sp"
        android:inputType="textMultiLine"
        android:textSize="20sp"
        android:hint="@string/writeName_name_hint"/>

    <Button
        android:id="@+id/done_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/writeName_editText"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="20sp"
        android:padding="15sp"
        android:backgroundTint="@color/colorSecondary"
        android:text="@string/done_buttom_text"/>

</androidx.constraintlayout.widget.ConstraintLayout>